feat: extend user schema
